✨ ShowRel, improve spaces and fix the overflow hidden issue. init animetions

--- a/src/assets/style/base.css
+++ b/src/assets/style/base.css
@@ -37,7 +37,6 @@ body {
   font-family: 'Friz Quadrata Regular OS';
   cursor: url('../wcursor.cur'), pointer;
   padding: 0;
-  overflow: hidden;
 }
 
 a {
